--- a/recipe-app/src/App.css
+++ b/recipe-app/src/App.css
@@ -13,3 +13,29 @@ html,body,#root{
   height: 100%;
   
 }
+
+.backgroundImage1{
+  background-image: url(./assets/free-photo-of-spices-on-a-spoon-with-a-spoon-in-the-middle.jpeg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
+
+.backgroundImage2{
+  background-image: url(./assets/pexels-photo-8100518.jpeg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
+
+.backgroundImage3{
+  background-image: url(./assets/pexels-photo-7976107.jpeg);
+  background-repeat: no-repeat;
+  height: 100vh;
+  width: 100%;
+}
+
+.backgroundImageContainer{
+  display: grid;
+  grid-template-columns: auto auto auto;
+}
